--- a/main.html
+++ b/main.html
@@ -2,6 +2,7 @@
 <html class="login-pf">
     <head>
         <title>Main</title>
+        <meta charset="UTF-8">
         <link rel="stylesheet" href="../style.css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -31,19 +32,20 @@
                 <div style="width: 100%; padding-right: 40px;" class="flex center">Menu of service</div>
             </div>
             <div class="select-dropdown flex" role="listbox" id="select-dropdown">
-                <li><a href="student.html">Manage Student</a></li>
-                <li><a href="view.html">View Log</a></li>
-                <li><a href="printer.html">Manage Printer</a></li>
-                <li><a href="system.html">Configure System</a></li>
-                <li style="border: none;"><a href="report.html">Reports</a></li>
+
+                <li><a href="print.html">Print</a></li>
+                <li><a href="log.html">Log</a></li>
+                <li><a href="pay.html">Payment</a></li>
+                <li style="border: none;"><a href="my.html">My Profile</a></li>
+
             </div>
         </div>
         <div class="flex main" style="height: 100%;">
             <div class="flex center info flex-column" style="grid-area: info;">
-                <div>Khoa quản lý:</div>
-                <div class="center flex">Khoa Khoa học - Kỹ Thuật Máy tính</div>
-                <div>Đơn vị: CN</div>
-                <div>Lân truy cập gần nhất:</div>
+                <div>Cấp bậc thành viên</div>
+                <div>Binh Nhất</div>
+                <div>Số lần in: 1</div>
+                <div>Lần truy cập gần nhất:</div>
                 <div>09/11/2023</div>
             </div>
             <div class="flex center flex-column" style="grid-area: display;">
